creusot/tests/should_fail/bug/specialize.coma

module T_core__ptr__non_null__NonNull
  use prelude.prelude.Opaque
  
  type t_NonNull 't =
    | C_NonNull opaque_ptr
  
  let rec t_NonNull < 't > (input:t_NonNull 't) (ret  (pointer:opaque_ptr))= any
    [ good (pointer:opaque_ptr)-> {C_NonNull pointer = input} (! ret {pointer}) ]
    
end
module T_core__marker__PhantomData
  type t_PhantomData 't =
    | C_PhantomData
  
  let rec t_PhantomData < 't > (input:t_PhantomData 't) (ret  )= any [ good -> {C_PhantomData  = input} (! ret) ] 
end
module T_core__ptr__unique__Unique
  use T_core__marker__PhantomData as PhantomData'0
  
  use T_core__ptr__non_null__NonNull as NonNull'0
  
  type t_Unique 't =
    | C_Unique (NonNull'0.t_NonNull 't) (PhantomData'0.t_PhantomData 't)
  
  let rec t_Unique < 't > (input:t_Unique 't) (ret  (pointer:NonNull'0.t_NonNull 't) (_marker:PhantomData'0.t_PhantomData 't))= any
    [ good (pointer:NonNull'0.t_NonNull 't) (_marker:PhantomData'0.t_PhantomData 't)-> {C_Unique pointer _marker
      = input}
      (! ret {pointer} {_marker}) ]
    
end
module T_alloc__raw_vec__Cap
  use prelude.prelude.UIntSize
  
  use prelude.prelude.Int
  
  type t_Cap  =
    | C_Cap usize
  
  let rec t_Cap (input:t_Cap) (ret  (field_0:usize))= any
    [ good (field_0:usize)-> {C_Cap field_0 = input} (! ret {field_0}) ]
    
end
module T_alloc__raw_vec__RawVec
  use T_alloc__raw_vec__Cap as Cap'0
  
  use T_core__ptr__unique__Unique as Unique'0
  
  type t_RawVec 't 'a =
    | C_RawVec (Unique'0.t_Unique 't) (Cap'0.t_Cap) 'a
  
  let rec t_RawVec < 't > < 'a > (input:t_RawVec 't 'a) (ret  (ptr:Unique'0.t_Unique 't) (cap:Cap'0.t_Cap) (alloc:'a))= any
    [ good (ptr:Unique'0.t_Unique 't) (cap:Cap'0.t_Cap) (alloc:'a)-> {C_RawVec ptr cap alloc = input}
      (! ret {ptr} {cap} {alloc}) ]
    
end
module T_alloc__vec__Vec
  use prelude.prelude.UIntSize
  
  use prelude.prelude.Int
  
  use T_alloc__raw_vec__RawVec as RawVec'0
  
  type t_Vec 't 'a =
    | C_Vec (RawVec'0.t_RawVec 't 'a) usize
  
  let rec t_Vec < 't > < 'a > (input:t_Vec 't 'a) (ret  (buf:RawVec'0.t_RawVec 't 'a) (len:usize))= any
    [ good (buf:RawVec'0.t_RawVec 't 'a) (len:usize)-> {C_Vec buf len = input} (! ret {buf} {len}) ]
    
end
module T_alloc__alloc__Global
  type t_Global  =
    | C_Global
  
  let rec t_Global (input:t_Global) (ret  )= any [ good -> {C_Global  = input} (! ret) ] 
end
module M_specialize__f [#"specialize.rs" 21 0 21 17]
  let%span sspecialize0 = "specialize.rs" 24 20 24 25
  let%span span1 = "specialize.rs" 17 14 17 18
  
  use T_alloc__alloc__Global as Global'0
  
  use prelude.prelude.UInt32
  
  use prelude.prelude.Int
  
  use T_alloc__vec__Vec as Vec'0
  
  use prelude.prelude.Intrinsic
  
  let rec x'0 (self:Vec'0.t_Vec uint32 (Global'0.t_Global)) (return'  (ret:()))= any
    [ return' (result:())-> {[%#span1] true} (! return' {result}) ]
    
  
  meta "compute_max_steps" 1000000
  
  let rec f (v:Vec'0.t_Vec uint32 (Global'0.t_Global)) (return'  (ret:()))= (! bb0
    [ bb0 = s0 [ s0 = x'0 {v} (fun (_ret':()) ->  [ &_2 <- _ret' ] s1) | s1 = bb1 ] 
    | bb1 = s0 [ s0 = {[@expl:assertion] [%#sspecialize0] false} s1 | s1 = bb2 ] 
    | bb2 = return' {_0} ]
    ) [ & _0 : () = any_l () | & v : Vec'0.t_Vec uint32 (Global'0.t_Global) = v | & _2 : () = any_l () ] 
    [ return' (result:())-> (! return' {result}) ]
    
end
module M_specialize__g [#"specialize.rs" 27 0 27 18]
  type t
  
  let%span sspecialize0 = "specialize.rs" 31 20 31 25
  let%span sspecialize1 = "specialize.rs" 27 8 27 9
  let%span span2 = "../../../../creusot-contracts/src/std/boxed.rs" 28 8 28 18
  let%span span3 = "../../../../creusot-contracts/src/logic/seq.rs" 198 8 198 97
  let%span span4 = "../../../../creusot-contracts/src/std/vec.rs" 19 14 19 41
  let%span span5 = "../../../../creusot-contracts/src/std/vec.rs" 68 20 68 41
  let%span span6 = "specialize.rs" 6 9 6 13
  
  predicate inv'3 (_1 : t)
  
  use T_alloc__alloc__Global as Global'0
  
  predicate invariant'2 (self : t) =
    [%#span2] inv'3 self
  
  predicate inv'2 (_1 : t)
  
  axiom inv_axiom'2 [@rewrite] : forall x : t [inv'2 x] . inv'2 x = invariant'2 x
  
  use seq.Seq
  
  use seq.Seq
  
  use prelude.prelude.Int
  
  use seq.Seq
  
  predicate invariant'1 (self : Seq.seq t) =
    [%#span3] forall i : int . 0 <= i /\ i < Seq.length self  -> inv'2 (Seq.get self i)
  
  predicate inv'1 (_1 : Seq.seq t)
  
  axiom inv_axiom'1 [@rewrite] : forall x : Seq.seq t [inv'1 x] . inv'1 x = invariant'1 x
  
  use T_alloc__vec__Vec as Vec'0
  
  use prelude.prelude.UIntSize
  
  use prelude.prelude.UIntSize
  
  constant v_MAX'0 : usize = (18446744073709551615 : usize)
  
  function shallow_model'0 (self : Vec'0.t_Vec t (Global'0.t_Global)) : Seq.seq t
  
  axiom shallow_model'0_spec : forall self : Vec'0.t_Vec t (Global'0.t_Global) . [%#span4] Seq.length (shallow_model'0 self)
  <= UIntSize.to_int (v_MAX'0 : usize)
  
  predicate invariant'0 (self : Vec'0.t_Vec t (Global'0.t_Global)) =
    [%#span5] inv'1 (shallow_model'0 self)
  
  predicate inv'0 (_1 : Vec'0.t_Vec t (Global'0.t_Global))
  
  axiom inv_axiom'0 [@rewrite] : forall x : Vec'0.t_Vec t (Global'0.t_Global) [inv'0 x] . inv'0 x = invariant'0 x
  
  use prelude.prelude.Intrinsic
  
  let rec x'0 (self:Vec'0.t_Vec t (Global'0.t_Global)) (return'  (ret:()))= {[@expl:precondition] [%#span6] inv'0 self}
    any [ return' (result:())-> (! return' {result}) ] 
  
  meta "compute_max_steps" 1000000
  
  let rec g (v:Vec'0.t_Vec t (Global'0.t_Global)) (return'  (ret:()))= {[%#sspecialize1] inv'0 v}
    (! bb0
    [ bb0 = s0 [ s0 = x'0 {v} (fun (_ret':()) ->  [ &_2 <- _ret' ] s1) | s1 = bb1 ] 
    | bb1 = s0 [ s0 = {[@expl:assertion] [%#sspecialize0] false} s1 | s1 = bb2 ] 
    | bb2 = return' {_0} ]
    ) [ & _0 : () = any_l () | & v : Vec'0.t_Vec t (Global'0.t_Global) = v | & _2 : () = any_l () ] 
    [ return' (result:())-> (! return' {result}) ]
    
end
module M_specialize__h [#"specialize.rs" 34 0 34 17]
  let%span sspecialize0 = "specialize.rs" 37 20 37 25
  let%span span1 = "../../../../creusot-contracts/src/std/boxed.rs" 28 8 28 18
  let%span span2 = "../../../../creusot-contracts/src/logic/seq.rs" 198 8 198 97
  let%span span3 = "../../../../creusot-contracts/src/std/vec.rs" 19 14 19 41
  let%span span4 = "../../../../creusot-contracts/src/std/vec.rs" 68 20 68 41
  let%span span5 = "specialize.rs" 12 17 12 21
  let%span span6 = "specialize.rs" 11 14 11 19
  
  use prelude.prelude.Int32
  
  predicate inv'3 (_1 : int32)
  
  axiom inv_axiom'3 [@rewrite] : forall x : int32 [inv'3 x] . inv'3 x = true
  
  use T_alloc__alloc__Global as Global'0
  
  predicate invariant'2 (self : int32) =
    [%#span1] inv'3 self
  
  predicate inv'2 (_1 : int32)
  
  axiom inv_axiom'2 [@rewrite] : forall x : int32 [inv'2 x] . inv'2 x = true
  
  use seq.Seq
  
  use seq.Seq
  
  use prelude.prelude.Int
  
  use seq.Seq
  
  predicate invariant'1 (self : Seq.seq int32) =
    [%#span2] forall i : int . 0 <= i /\ i < Seq.length self  -> inv'2 (Seq.get self i)
  
  predicate inv'1 (_1 : Seq.seq int32)
  
  axiom inv_axiom'1 [@rewrite] : forall x : Seq.seq int32 [inv'1 x] . inv'1 x = true
  
  use T_alloc__vec__Vec as Vec'0
  
  use prelude.prelude.UIntSize
  
  use prelude.prelude.UIntSize
  
  constant v_MAX'0 : usize = (18446744073709551615 : usize)
  
  function shallow_model'0 (self : Vec'0.t_Vec int32 (Global'0.t_Global)) : Seq.seq int32
  
  axiom shallow_model'0_spec : forall self : Vec'0.t_Vec int32 (Global'0.t_Global) . [%#span3] Seq.length (shallow_model'0 self)
  <= UIntSize.to_int (v_MAX'0 : usize)
  
  predicate invariant'0 (self : Vec'0.t_Vec int32 (Global'0.t_Global)) =
    [%#span4] inv'1 (shallow_model'0 self)
  
  predicate inv'0 (_1 : Vec'0.t_Vec int32 (Global'0.t_Global))
  
  axiom inv_axiom'0 [@rewrite] : forall x : Vec'0.t_Vec int32 (Global'0.t_Global) [inv'0 x] . inv'0 x = true
  
  use prelude.prelude.Intrinsic
  
  let rec x'0 (self:Vec'0.t_Vec int32 (Global'0.t_Global)) (return'  (ret:()))= {[@expl:precondition] [%#span5] inv'0 self}
    any [ return' (result:())-> {[%#span6] false} (! return' {result}) ] 
  
  meta "compute_max_steps" 1000000
  
  let rec h (v:Vec'0.t_Vec int32 (Global'0.t_Global)) (return'  (ret:()))= (! bb0
    [ bb0 = s0 [ s0 = x'0 {v} (fun (_ret':()) ->  [ &_2 <- _ret' ] s1) | s1 = bb1 ] 
    | bb1 = s0 [ s0 = {[@expl:assertion] [%#sspecialize0] false} s1 | s1 = bb2 ] 
    | bb2 = return' {_0} ]
    ) [ & _0 : () = any_l () | & v : Vec'0.t_Vec int32 (Global'0.t_Global) = v | & _2 : () = any_l () ] 
    [ return' (result:())-> (! return' {result}) ]
    
end
module M_specialize__qyi2463200954251793265 [#"specialize.rs" 9 0 9 20] (* <std::vec::Vec<U> as T> *)
  type u
  
  let%span sspecialize0 = "specialize.rs" 12 4 12 22
  let%span span1 = "../../../../creusot-contracts/src/std/boxed.rs" 28 8 28 18
  let%span span2 = "../../../../creusot-contracts/src/logic/seq.rs" 198 8 198 97
  let%span span3 = "../../../../creusot-contracts/src/std/vec.rs" 19 14 19 41
  let%span span4 = "../../../../creusot-contracts/src/std/vec.rs" 68 20 68 41
  
  predicate inv'3 (_1 : u)
  
  use T_alloc__alloc__Global as Global'0
  
  predicate invariant'2 (self : u) =
    [%#span1] inv'3 self
  
  predicate inv'2 (_1 : u)
  
  axiom inv_axiom'2 [@rewrite] : forall x : u [inv'2 x] . inv'2 x = invariant'2 x
  
  use seq.Seq
  
  use seq.Seq
  
  use prelude.prelude.Int
  
  use seq.Seq
  
  predicate invariant'1 (self : Seq.seq u) =
    [%#span2] forall i : int . 0 <= i /\ i < Seq.length self  -> inv'2 (Seq.get self i)
  
  predicate inv'1 (_1 : Seq.seq u)
  
  axiom inv_axiom'1 [@rewrite] : forall x : Seq.seq u [inv'1 x] . inv'1 x = invariant'1 x
  
  use T_alloc__vec__Vec as Vec'0
  
  use prelude.prelude.UIntSize
  
  use prelude.prelude.UIntSize
  
  constant v_MAX'0 : usize = (18446744073709551615 : usize)
  
  function shallow_model'0 (self : Vec'0.t_Vec u (Global'0.t_Global)) : Seq.seq u
  
  axiom shallow_model'0_spec : forall self : Vec'0.t_Vec u (Global'0.t_Global) . [%#span3] Seq.length (shallow_model'0 self)
  <= UIntSize.to_int (v_MAX'0 : usize)
  
  predicate invariant'0 (self : Vec'0.t_Vec u (Global'0.t_Global)) =
    [%#span4] inv'1 (shallow_model'0 self)
  
  predicate inv'0 (_1 : Vec'0.t_Vec u (Global'0.t_Global))
  
  axiom inv_axiom'0 [@rewrite] : forall x : Vec'0.t_Vec u (Global'0.t_Global) [inv'0 x] . inv'0 x = invariant'0 x
  
  goal x_refn : [%#sspecialize0] forall self : Vec'0.t_Vec u (Global'0.t_Global) . inv'0 self  -> inv'0 self
end
module M_specialize__qyi7277341344010858608 [#"specialize.rs" 15 0 15 19] (* <std::vec::Vec<u32> as T> *)
  let%span sspecialize0 = "specialize.rs" 18 4 18 14
  
  goal x_refn : [%#sspecialize0] true
end
